force-app/main/default/objects/Linker_Link__c/fields/Is_Global__c.field-meta.xml
<CustomField>
    <fullName>Is_Global__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Global</label>
    <type>Checkbox</type>
</CustomField>