force-app/main/default/objects/Linker_Link__c/fields/Is_Internal__c.field-meta.xml
<CustomField>
    <fullName>Is_Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For links that link to items in this org</description>
    <inlineHelpText>Append org domain onto relative url specified here.</inlineHelpText>
    <label>Is Internal</label>
    <type>Checkbox</type>
</CustomField>