force-app/main/default/objects/Linker_Link__c/fields/url__c.field-meta.xml
<CustomField>
    <fullName>url__c</fullName>
    <description>Url for the custom link</description>
    <label>url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>